[package]
name = "fmtlog"
version = "0.1.0"
description = "A simple configurable logger with format specification."
authors = ["watcol <potfman@gmail.com>"]
homepage = "https://github.com/watcol/fmtlog"
repository = "https://github.com/watcol/fmtlog"
keywords = ["log", "logger", "format"]
categories = ["development-tools::debugging"]
license = "MIT"
readme = "README.md"
edition = "2018"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs"
]

[features]
conf-json = ["serde", "serde_json"]
conf-yaml = ["serde", "serde_yaml"]
conf-toml = ["serde", "toml"]

[dependencies]
log = { version = "0.4.11", features = ["std"] }
thread_local = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.8", optional = true }
toml = { version = "0.5.8", optional = true }

[package.metadata.docs.rs]
all-features = true
