[package]
name = "fmtlog"
version = "0.1.2"
description = "A simple configurable logger with format specification."
authors = ["watcol <potfman@gmail.com>"]
repository = "https://github.com/watcol/fmtlog"
keywords = ["log", "logger", "format"]
categories = ["development-tools::debugging"]
license = "MIT"
readme = "README.md"
edition = "2018"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs"
]

[dependencies]
log = { version = "0.4", features = ["std"] }
thread_local = "1.0"
colored = "2.0"
chrono = "0.4"
