[package]
name = "fmtlog"
version = "0.1.3"
description = "A simple configurable logger with format specification."
authors = ["watcol <potfman@gmail.com>"]
repository = "https://github.com/watcol/fmtlog"
keywords = ["log", "logger", "format"]
categories = ["development-tools::debugging"]
license = "MIT"
readme = "README.md"
edition = "2018"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs"
]

[features]
default = ["colored", "chrono"]

[dependencies]
log = { version = "0.4", features = ["std"] }
thread_local = "1.0"
colored = { version = "2.0", optional = true }
chrono = { version = "0.4", optional = true }
